##########################
# Setup.py Configuration #
##########################
[metadata]
name = bio2bel_msig
version = 0.2.0-dev
description = A package for converting MSigDB gene sets into BEL
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/bio2bel/msig
download_url = https://github.com/bio2bel/msig/releases
project_urls =
    Bug Tracker = https://github.com/bio2bel/msig/issues
    Source Code = https://github.com/bio2bel/msig

# Author information
author = Daniel Domingo-Fernández
author_email = daniel.domingo.fernandez@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

# License Information
license = MIT
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    Biological Expression Language
    BEL
    Systems Biology

[options]
install_requires =
    pybel>=0.14.9,<0.15.0
    click
    bio2bel[web]>=0.3.8,<0.4.0
    pyobo>=0.2.2
    tqdm
    sqlalchemy
    requests
    pandas

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
bio2bel =
    msig = bio2bel_msig
compath =
    msig = bio2bel_msig
console_scripts =
    bio2bel_msig = bio2bel_msig.cli:main

######################
# Doc8 Configuration #
# (doc8.ini)         #
######################
[doc8]
max-line-length = 120

##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = bio2bel_msig
omit =
    tests/*
    docs/*
    scripts/*

[coverage:paths]
source =
    src/bio2bel_msig
    .tox/*/lib/python*/site-packages/bio2bel_msig

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
